--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <body>
     <main>
         
-        <section id="Intro">
+        <section id="Intro" class="Intro">
 
             <img src="imagens/LogoProjeto.png" alt="Hell Modifiers">
             <h4>Queimando a concorrência</h4>
 
         </section>
 
-        <section id="OqVendemos">
+        <section id="OqVendemos" class="OqVendemos">
 
             <h2>O que vende a Hell Modifiers?</h2>
 
@@ -34,15 +34,22 @@
 
         <hr>
 
-        <section id="Produtos">
+        <section id="Produtos" class="Produtos">
 
             <h2>Modificações</h2>
 
+            <img src="imagens/escapamento.png" alt="Escapamento de carro">
+            <img src="imagens/aerofolio.png" alt="Aerofolio de carro">
+            <img src="imagens/motorv8.png" alt="Motor V8">
+
             <h2>Interiores personalizados</h2>
+            <img src="imagens/interior.jpg" alt="Interior de carro">
+            <img src="imagens/interior2.jpg" alt="Interior de carro">
+            <img src="imagens/interior3.jpg" alt="Interior de carro">
 
         </section>
 
-        <section id="Sobre nós">
+        <section id="Sobre nós" class="Sobre nós">
 
             <h2>Sobre nós</h2>
             <p>
